EmailService,PdfTicketGeneratorService and ExcelGeneratorService

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,5 +15,13 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.servlet.multipart.max-file-size=1000000MB
 spring.servlet.multipart.max-request-size=1000000MB
 
+#Email properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=sonukrr526@gmail.com
+spring.mail.password=saefegyheljcjktn
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
 
